--- a/app/src/main/res/layout/atesaki.xml
+++ b/app/src/main/res/layout/atesaki.xml
@@ -89,7 +89,8 @@
                 android:scaleType="fitXY"
                 android:layout_below="@+id/textView3"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:layout_width="match_parent"
