--- a/app/src/main/res/drawable/layout_design.xml
+++ b/app/src/main/res/drawable/layout_design.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-        <corners android:radius="10dp" />
+        <corners android:radius="20dp" />
 
         <solid
             android:color="#ff007cff"/>
 
         <stroke
-
             android:width="5dp"
-            android:color="#ff007cff" />
+            android:color="#ffffff" />
 
     </shape>
