--- a/app/src/main/res/layout/cloud_music.xml
+++ b/app/src/main/res/layout/cloud_music.xml
@@ -7,7 +7,7 @@
         android:layout_width="120dp"
         android:layout_height="70dp"
         android:text="音楽"
-        android:id="@+id/musictextView"
+        android:id="@+id/documenttextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
@@ -38,7 +38,7 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/musictextView"
+        android:layout_below="@+id/documenttextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Data"
-            android:id="@+id/dataView"
+            android:id="@+id/datatextView"
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="40dp"
@@ -94,23 +94,24 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:id="@+id/graylineView"
-        android:src="@mipmap/dot_gray"
         android:scaleType="fitXY"
         android:layout_below="@+id/linearLayout9"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_below="@+id/graylineView">
+        android:layout_height="135dp"
+        android:layout_below="@+id/graylineView"
+        android:id="@+id/linearLayout10">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="105dp"
             android:layout_below="@+id/graylineView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -121,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/noteView"
-                android:layout_weight="0.75"
+                android:layout_weight="1"
                 android:src="@mipmap/kigou2"
                 android:scaleType="fitCenter"
                 android:layout_marginLeft="15dp" />
@@ -157,34 +158,96 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView10"
-                android:layout_weight="2" />
+                android:id="@+id/cloudView"
+                android:layout_weight="1.5"
+                android:src="@mipmap/download_from_cloud_100"
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:id="@+id/imageView11"
-            android:src="@mipmap/dot_gray"
+            android:id="@+id/graylineView2"
             android:scaleType="fitXY"
             android:layout_below="@+id/linearLayout9"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="15dp" />
+            android:layout_marginTop="15dp"
+            android:background="@android:color/darker_gray" />
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/textView4"
+        android:layout_height="105dp"
+        android:layout_below="@+id/linearLayout10"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout14">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/noteView2"
+            android:layout_weight="1"
+            android:src="@mipmap/kigou2"
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="15dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:layout_marginLeft="50dp" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="アンパンマンマーチ"
+                android:id="@+id/musictitleView2"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:textSize="28dp"
+                android:gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" 2015/10/12"
+                android:id="@+id/musicdataView2"
+                android:layout_weight="1"
+                android:textSize="28dp"
+                android:textColor="@android:color/black"
+                android:gravity="center_vertical" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/playView"
+            android:layout_weight="1.5"
+            android:src="@mipmap/playfilled"
+            android:scaleType="center" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:id="@+id/graylineView3"
+        android:layout_below="@+id/linearLayout14"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@android:color/darker_gray" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/plusView"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/linearLayout9"
-        android:layout_alignStart="@+id/linearLayout9"
-        android:text="写真/動画/音楽/その他"
-        android:textSize="50dp"
-        android:textColor="@android:color/white"
-        android:background="#ff007cff"
-        android:gravity="center" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:src="@mipmap/plusfield" />
 
 </RelativeLayout>
