--- a/app/src/main/res/layout/top.xml
+++ b/app/src/main/res/layout/top.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="400dp"
                 android:layout_height="100dp"
-                android:id="@+id/tv_top_next"
+                android:id="@+id/iv_top_next"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="57dp"
                 android:layout_centerHorizontal="true"
