--- a/app/src/main/res/layout/mailbox.xml
+++ b/app/src/main/res/layout/mailbox.xml
@@ -199,7 +199,7 @@
             android:layout_width="90dp"
             android:layout_height="70dp"
             android:id="@+id/no_openView"
-            android:src="@mipmap/maru"
+            android:src="@mipmap/maru0"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp" />
 
