--- a/app/src/main/res/layout/webbrows.xml
+++ b/app/src/main/res/layout/webbrows.xml
@@ -18,52 +18,29 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#000000"
-            android:visibility="gone" />
+            android:background="#818181"
+            android:visibility="visible" />
         <org.xwalk.core.XWalkView
             android:id="@+id/xwv_webbrows_facebook"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#000000"
-            android:visibility="gone" />
+            android:background="#818181"
+            android:visibility="invisible" />
         <org.xwalk.core.XWalkView
             android:id="@+id/xwv_webbrows_mixi"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#000000"
-            android:visibility="gone" />
+            android:background="#818181"
+            android:visibility="invisible" />
         <org.xwalk.core.XWalkView
             android:id="@+id/xwv_webbrows_googleplus"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#000000"
-            android:visibility="gone" />
-
-        <WebView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/wv_webbrows_twitter"
-            android:visibility="gone" />
-
-        <WebView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/wv_webbrows_facebook"
-            android:visibility="gone" />
-
-        <WebView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/wv_webbrows_mixi"
-            android:visibility="gone" />
-        <WebView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/wv_webbrows_googleplus"
-            android:visibility="gone" />
+            android:background="#818181"
+            android:visibility="invisible" />
 
     </FrameLayout>
 
