--- a/app/src/main/res/layout/cloud_choose.xml
+++ b/app/src/main/res/layout/cloud_choose.xml
@@ -74,7 +74,7 @@
             android:layout_width="440dp"
             android:layout_height="match_parent"
             android:id="@+id/onedriveView"
-            android:src="db @mipmap/onedrivetxt"
+            android:src="@mipmap/onedrivetxt"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:onClick="onClick" />
